# jarir-reader

./: .gitignore  LICENSE  README.md  forge.config.js  package-lock.json  package.json
.github/workflows/: build.yml  release.yml
_.github/workflows/: build.yml  release.yml
cli/: index2.js  package.json
cli/backend/: api-calls.js  audio.js  book-generator.js  book.js  bottom-info.js  cross-platform.js  decrypt.js  epub.js  helpers.js  transliteration.js
cli/public/: last-chapter.txt  template.opf.ejs
local_modules/entities/: package-lock.json  package.json
local_modules/fs-extra/: index.js
old_code/: forge.config.js  package-lock.json  package.json
old_code/cli/: .gitignore  index.js  index2.js
old_code/cli/backend/: api-calls.js  book.js  (+4 more)
old_code/ui/: index.html  index.js
src/: index.html  main.js  root.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/backend/: api_calls.rs  audio.rs  book.rs  book_generator.rs  cross_platform.rs  decrypt.rs  epub.rs  helpers.rs  mod.rs  transliteration.rs
src-tauri/src/tauri-plugin-sharesheet/: .gitignore  Cargo.toml  LICENSE  README.md  api-iife.js  build.rs  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  rollup.config.base.js  rollup.config.js  tsconfig.json
src-tauri/src/tauri-plugin-sharesheet/android/src/main/java/: SharesheetPlugin.kt
src-tauri/src/tauri-plugin-sharesheet/guest-js/: index.ts
src-tauri/src/tauri-plugin-sharesheet/ios/Sources/: SharesheetPlugin.swift
src-tauri/src/tauri-plugin-sharesheet/permissions/: default.toml
src-tauri/src/tauri-plugin-sharesheet/permissions/autogenerated/: reference.md
src-tauri/src/tauri-plugin-sharesheet/permissions/schemas/: schema.json
src-tauri/src/tauri-plugin-sharesheet/src/: lib.rs  models.rs
test/: test.js  test.php
ui/: index.html  index.js  package.json
ui/css/: index.css
ui/js/: preload.js  root.js
ui/src/: index.js
(+4 files in other folders)
