[package]
name = "jarir-reader"
version = "3.0.0"
description = "View/download your purchased books from Jarir Reader and convert them to DRM-free books"
authors = ["Abdulrahman Mohammed"]
edition = "2021"


[lib]
name = "jarir_reader_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
tauri = { version = "2.0.4", features = [] }
openssl-sys = {version = "0.9", features = ["vendored"] }
tauri-plugin-sharesheet = { path = "./src/tauri-plugin-sharesheet" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-shell = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
os_info = "3.0"
rand = "0.8"
regex = "1.11.0"
tokio = { version = "1.40.0", features = ["full"] }
epub-builder = "0.7.4"
zip = "2.2.0"
flate2 = "1.0"
reqwest="0.12.8"
chrono = "0.4.38"
uuid = { version = "1.10.0", features = ["v4"] }
thiserror = "1.0.63"
lazy_static = "1.5.0"
base64 = "0.22.1"
openssl = "0.10.66"
rust-crypto = "0.2.36"
app_dirs2 = "2.5.5"
